<resources>
    <string name="app_name">File Manager</string>
    <string name="search_hint">Search file...</string>
    <string name="new_files">New Files</string>
    <string name="today_label">Today</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_failed">Invalid email or password</string>
    <string name="file_details">File Details</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="drawer_subtitle">Browse files quickly</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_pictures">Pictures</string>
    <string name="drawer_videos">Videos</string>
    <string name="drawer_music">Music</string>
    <string name="drawer_documents">Documents</string>
    <string name="drawer_downloads">Downloads</string>
    <string name="drawer_zip">Zip files</string>
    <string name="drawer_apps">Apps</string>
    <string name="drawer_storage_section">Storage</string>
    <string name="drawer_internal">Internal storage</string>
    <string name="drawer_sd">SD card</string>
    <string name="items_count">%1$d items</string>
    <string name="back">Back</string>
    <string name="browse_category_subtitle">Media and files on this device</string>
    <string name="sd_not_available">No SD card is mounted</string>
    <string name="loading_files">Loading…</string>
    <string name="pull_to_refresh">Pull down to refresh</string>
    <string name="profile">Profile</string>
    <string name="action_share">Share</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_properties">Properties</string>
    <string name="action_not_available">This action isn\'t available for this item</string>
    <string name="delete_confirm_message">Delete \"%1$s\"? This cannot be undone.</string>
    <string name="rename_dialog_title">Rename file</string>
    <string name="rename_hint">File name</string>
    <string name="rename_empty">Enter a file name</string>
    <string name="delete_dialog_title">Delete file</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="renamed_ok">File renamed</string>
    <string name="rename_failed">Couldn\'t rename</string>
    <string name="deleted_ok">Deleted</string>
    <string name="delete_failed">Couldn\'t delete</string>
    <string name="prop_name">Name: %1$s</string>
    <string name="prop_type">Type: %1$s</string>
    <string name="prop_size">Size: %1$s</string>
    <string name="prop_path">Location: %1$s</string>
    <string name="prop_mime">MIME: %1$s</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="more_options">More options</string>
    <string name="badge_system">System</string>
    <string name="badge_user">User</string>
    <string name="photos_subtitle">All photos on this device</string>
    <string name="videos_subtitle">All videos on this device</string>
    <string name="apps_subtitle">All installed applications</string>
    <string name="photos_count">%1$d photos</string>
    <string name="videos_count">%1$d videos</string>
    <string name="apps_count">%1$d applications</string>
    <string name="preview_image">Image preview</string>
    <string name="preview_video">Video playback</string>
    <string name="preview_audio">Audio playback</string>
    <string name="audio_now_playing">Now playing</string>
    <string name="audio_playing_badge">Audio</string>
    <string name="audio_skip_back">−10s</string>
    <string name="audio_skip_forward">+10s</string>
    <string name="audio_repeat">Repeat</string>
    <string name="play_audio">Play or pause audio</string>
    <string name="video_playback_failed">Could not play this video</string>
    <string name="audio_playback_failed">Could not play this audio file</string>
    <string name="dashboard_tab_recent">Recent</string>
    <string name="dashboard_tab_starred">Starred</string>
    <string name="dashboard_tab_offline">Offline</string>
    <string name="dashboard_filter_all">All</string>
    <string name="dashboard_filter_viewed">Viewed</string>
    <string name="dashboard_filter_saved">Saved</string>
    <string name="dashboard_filter_uploaded">Uploaded</string>
    <string name="dashboard_filter_scanned">Scanned</string>
    <string name="dashboard_nav_files">Files</string>
    <string name="dashboard_nav_share">Share</string>
    <string name="dashboard_nav_my">My</string>
    <string name="dashboard_add">Add</string>
    <string name="dashboard_empty">No files in this section.</string>
    <string name="dashboard_share_hint">Share section coming soon</string>
</resources>